--- a/Questions/Questions.csproj
+++ b/Questions/Questions.csproj
@@ -49,8 +49,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Fizz_Buzz.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Turvo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
